docker spring boot

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,5 @@ spring.datasource.initialization-mod=always
 spring.datasource.continue-on-error=false
 spring.datasource.sql-script-encoding=utf-8
 spring.datasource.separator=;
+
+spring.jmx.enabled=false
