--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,7 @@
 HELP.md
 target/
+logs/
+.mvn/
 !.mvn/wrapper/maven-wrapper.jar
 !**/src/main/**
 !**/src/test/**
@@ -29,6 +31,3 @@ build/
 
 ### VS Code ###
 .vscode/
-
-.mvx/
-logs
