--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,7 @@
     <properties>
         <java.version>1.8</java.version>
         <ibatis.starter.version>2.1.0</ibatis.starter.version>
+        <dockerfile-maven-version>1.4.13</dockerfile-maven-version>
     </properties>
 
     <repositories>
@@ -136,32 +137,74 @@
         </dependency>
     </dependencies>
 
-    <build>
+
+    <!-- Spring boot Shell docker :: Dockerfile.0 -->
+    <!-- <build>
         <finalName>bootDocker</finalName>
         <plugins>
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
             </plugin>
+        </plugins>
+    </build> -->
 
+    <!-- Spring boot and dockerfile plugin fat jar :: Dockerfile.1-->
+   <!-- <build>
+        <finalName>bootDocker</finalName>
+        <plugins>
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+            </plugin>
             <plugin>
                 <groupId>com.spotify</groupId>
-                <artifactId>docker-maven-plugin</artifactId>
-                <version>1.2.1</version>
+                <artifactId>dockerfile-maven-plugin</artifactId>
+                <version>${dockerfile-maven-version}</version>
+                <executions>
+                    <execution>
+                        <id>default</id>
+                        <goals>
+                            &lt;!&ndash; 如果package时不想用docker打包,就注释掉这个goal &ndash;&gt;
+                            <goal>build</goal>
+                            <goal>push</goal>
+                        </goals>
+                    </execution>
+                </executions>
                 <configuration>
-                    <imageName>${project.groupId}/${project.artifactId}</imageName>
-                    <dockerDirectory>/</dockerDirectory>
-                    <resources>
-                        <resource>
-                            <targetPath>/</targetPath>
-                            <directory>${project.build.directory}</directory>
-                            <include>${project.build.finalName}.jar</include>
-                        </resource>
-                    </resources>
+                    <repository>bittx/boot</repository>
+                    <tag>${project.version}</tag>
+                    <buildArgs>
+                        <JAR_FILE>target/${project.build.finalName}.jar</JAR_FILE>
+                    </buildArgs>
                 </configuration>
             </plugin>
-
         </plugins>
-    </build>
+    </build>-->
+
+
+   <!--
+            <plugin>
+    			<groupId>org.apache.maven.plugins</groupId>
+    			<artifactId>maven-dependency-plugin</artifactId>
+    			<executions>
+        			<execution>
+            			<id>unpack</id>
+            			<phase>package</phase>
+            			<goals>
+                			<goal>unpack</goal>
+            			</goals>
+						<configuration>
+							<artifactItems>
+								<artifactItem>
+									<groupId>${project.groupId}</groupId>
+									<artifactId>${project.artifactId}</artifactId>
+									<version>${project.version}</version>
+								</artifactItem>
+							</artifactItems>
+						</configuration>
+        			</execution>
+    				</executions>
+			</plugin> -->
 
 </project>
