--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
+#spring.datasource.url=jdbc:h2:~/test
 spring.datasource.url=jdbc:h2:mem:test
 spring.datasource.driver-class-name=org.h2.Driver
 spring.datasource.username=root
@@ -9,5 +10,15 @@ spring.datasource.initialization-mod=always
 spring.datasource.continue-on-error=false
 spring.datasource.sql-script-encoding=utf-8
 spring.datasource.separator=;
+
+##h2 web console设置
+spring.datasource.platform=h2  #表明使用的数据库平台是h2
+#进行该配置后，h2 web consloe就可以在远程访问了。否则只能在本机访问。
+spring.h2.console.settings.web-allow-others=true
+#进行该配置，你就可以通过YOUR_URL/h2访问h2 web consloe。YOUR_URL是你程序的访问URl。
+spring.h2.console.path=/h2
+#进行该配置，程序开启时就会启动h2 web console。这是默认的，
+# 如果你不想在启动程序时启动h2 web console，那么就设置为false。
+spring.h2.console.enabled=true
 
 spring.jmx.enabled=false
