--- a/.dockerignore
+++ b/.dockerignore
@@ -11,3 +11,13 @@ src/
 *.xml
 HELP.md
 mvnw*
+logs
+target/archive-tmp/
+target/bin/
+target/classes/
+target/config/
+target/generated-sources/
+target/maven-archiver/
+target/maven-status/
+target/test-classes/
+target/boot-docker-1.0.0.jar
