--- a/.dockerignore
+++ b/.dockerignore
@@ -2,16 +2,18 @@
 .idea/
 .mvn/
 .settings/
-.logs/*
-src/
+.vscode
+.logs
+.src
 .classpath
 .gitignore
 .project
 *.iml
 *.xml
-HELP.md
-mvnw*
-logs
+.logs/*
+mvn*
+pom*
+Dockerfile.*
 target/archive-tmp/
 target/bin/
 target/classes/
@@ -21,3 +23,6 @@ target/maven-archiver/
 target/maven-status/
 target/test-classes/
 target/boot-docker-1.0.0.jar
+
+*.md
+!README.md
